[package]
name = "smart-stables-monitor"
version = "1.0.0"
authors = ["Maciej Kasperek (von Krappitz)"]
edition = "2021"
description = "Smart Stables Monitor — ESP32 firmware in Rust (port from Arduino C++)"

[dependencies]
esp-idf-hal = "0.44"
esp-idf-svc = { version = "0.49", features = ["experimental"] }
esp-idf-sys = { version = "0.35", features = ["binstart"] }
embedded-hal = "1.0"
log = "0.4"
esp_idf_logger = "0.1"
anyhow = "1.0"

[build-dependencies]
embuild = "0.32"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"
